--- a/pom.xml
+++ b/pom.xml
@@ -63,5 +63,12 @@
             <version>5.2.4.Final</version>
         </dependency>
 
+        //google map
+        <dependency>
+            <groupId>com.google.maps</groupId>
+            <artifactId>google-maps-services</artifactId>
+            <version>0.1.20</version>
+        </dependency>
+
     </dependencies>
 </project>
